--- a/index.html
+++ b/index.html
@@ -26,15 +26,9 @@
   </head>
   <body>
     <div class="app">
-      <div class="image-container">
-        <img src="./images/bg-desktop-dark.jpg" class="bg-image" />
-      </div>
-      <!--image container-->
-
       <div class="main">
         <div class="header">
           <h2 class="header-text">TO DO</h2>
-          <i class="fa-solid fa-sun mode-icon"></i>
         </div>
 
         <div class="main-app">
@@ -51,7 +45,7 @@
 
           <div class="app-footer">
             <p class="items-left hover-footer">
-              <span class="items-no">0</span> item(s) left
+              <span class="items-no">0</span> left
             </p>
 
             <div class="tasks-selection">
